# Nectar-Render

./: .gitignore  CHANGELOG.md  FinalAudit.md  LICENSE  README.md  install_dependencies.bat  launch.bat  pyproject.toml  start.py  statistique.md
.github/workflows/: ci.yml
.kilo/plans/: 1775220372915-sunny-eagle.md  1775222042507-tidy-falcon.md
backend/: main.py  requirements.txt
backend/routes/: __init__.py  convert.py  google_fonts.py  presets.py
backend/schemas/: __init__.py  convert_request.py
backend/services/: __init__.py  style_mapper.py
docs/plans/: 2026-04-03-architecture-phase-2.md  2026-04-05-pre-push-sweep.md
examples/: sample.md
frontend/: README.md  app.js  index.html  panel.html  preview-panel.js  style.css
frontend/assets/css/: base.css  tokens.css
frontend/assets/css/components/: buttons.css  dialogs.css  forms.css  navigation.css  preview.css  surfaces.css  tabs.css  toast.css  upload.css
frontend/assets/css/global/: motion.css  theming.css
frontend/assets/css/pages/: home.css  panel.css  result.css
frontend/assets/js/bootstrap/: home-app.js  panel-app.js
frontend/assets/js/config/: builtin-presets.js  defaults.js
frontend/assets/js/core/: api-base.js
frontend/assets/js/features/: conversion-flow.js  font-search-dropdown.js  image-assets.js  landing-upload.js  loading-overlay.js  missing-images-dialog.js  panel-context.js  presets-form.js  preview-panel.js  tabs.js  theme-toggle.js  toast.js
frontend/assets/js/pages/: home-page.js  panel-page.js
frontend/assets/js/platform/: dom-utils.js
frontend/assets/js/services/: backend-health.js  conversion-api.js  google-fonts-api.js  presets-api.js  preview-api.js
frontend/assets/js/state/: preset-store.js  session-store.js
src/md_to_pdf/: config.py  main.py
src/md_to_pdf/converter/: exporter.py  footnotes.py  highlight.py
src/md_to_pdf/services/: __init__.py  conversion_service.py  pdf_compression_service.py
src/md_to_pdf/ui/: __init__.py  app.py  widgets.py
src/md_to_pdf/utils/: paths.py  weasyprint_runtime.py
src/nectar_render/: __init__.py  cli.py  config.py  main.py  presets.py  style_schema.py
src/nectar_render/adapters/: __init__.py  document_renderer.py  footnotes.py  highlight.py  html_document.py  markdown_layout.py  markdown_pipeline.py  markdown_rendering.py  pdf_export.py  pdf_postprocess.py  runtime.py  storage.py
src/nectar_render/adapters/rendering/: __init__.py  document_renderer.py  footnotes.py  highlight.py  html_document.py  image_references.py  markdown_layout.py  markdown_pipeline.py  markdown_rendering.py  pdf_export.py  url_fetcher.py
src/nectar_render/application/: __init__.py  conversion.py  preview.py
src/nectar_render/converter/: __init__.py  document_renderer.py  exporter.py  footnotes.py  highlight.py  html_builder.py  markdown_layout.py  markdown_parser.py  markdown_rendering.py
src/nectar_render/core/: __init__.py  image_assets.py  presets.py  styles.py
src/nectar_render/core/preset_data/: academic.json  ambre.json  corporate.json  creative.json  developer.json  elegant.json  magazine.json  minimal.json  notebook.json  technical.json
src/nectar_render/interfaces/desktop/: __init__.py  app.py  app_state.py  controllers.py  panels.py  preset_store.py  presets.py  state_manager.py  state_mapping.py  theme.py  widgets.py
src/nectar_render/services/: __init__.py  conversion_service.py  pdf_compression_service.py
src/nectar_render/ui/: __init__.py  app.py  bindings.py  controllers.py  panels.py  presets.py  state_manager.py  theme.py  widgets.py
src/nectar_render/utils/: converters.py  logging.py  markdown.py  paths.py  weasyprint_runtime.py
tests/: test_app_state.py  test_backend_api_routes.py  test_backend_routes_validation.py  test_cli.py  test_conversion_service.py  test_google_fonts_route.py  test_highlight.py  test_html_builder.py  test_integration.py  test_main.py  test_markdown_parser.py  test_pdf_compression_service.py  test_presets.py  test_state_manager.py  test_ui_controllers.py  test_url_fetcher.py  test_widgets.py
