[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nectar-render"
dynamic = ["version"]
description = "CLI tool and library to convert Markdown to styled PDF/HTML with syntax highlighting and preset themes"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{ name = "Yuzuctus" }]
keywords = ["markdown", "pdf", "converter", "weasyprint"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "License :: Other/Proprietary License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "markdown>=3.6",
  "pygments>=2.18",
  "weasyprint>=68.1",
  "beautifulsoup4>=4.12",
  "bleach>=6.2",
  "pypdf>=5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
]

[project.scripts]
nectar-render = "nectar_render.main:main"

[project.urls]
Repository = "https://github.com/Yuzuctus/Nectar-Render"
Issues = "https://github.com/Yuzuctus/Nectar-Render/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "nectar_render.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "requires_weasyprint: marks tests requiring WeasyPrint runtime",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
